--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
 
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
-                    <a href="https://castella.art">CASTELLA.ART<img width="15px"
-                            style="position:relative; margin-left:4px; top: 2px;" src="cake.png"></a> : Creating a
-                    mathematical framework for attaining nibbāna in this life. <br /><br />[Open-Source Mobile App
-                    coming
-                    up soon.]
+                    CASTELLA <img width="15px" style="position:relative; margin-left:4px; top: 2px;" src="cake.png">
                     <br />
 
                     <br />
@@ -66,217 +62,34 @@
                     </div> -->
                 </div>
                 <div>
-                    <br />
-                    <!-- First we imagine, <br />
-                    then we implement. -->
-                    CASTELLA (カステ) is a delicious
-                    abbreviation for
-                    <br /><br />
-                    <blockquote>
-                        <a href="https://ncatlab.org/nlab/show/category+theory#section_Idea"
-                            style="text-decoration: inherit;"><u>C</u>ategory-theoretical
-                            <u>A</u>pproach <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
-                                src="cake.png" /></a>
-                        to <u>Ś</u>ūnyatā via the
-                        <a href="https://ncatlab.org/nlab/show/Introduction+to+Topology"
-                            style="text-decoration: inherit;"><u>T</u>opological
-                            induction <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
-                                src="cake.png" /></a> of
-                        <u>E</u>quanimity & <u>L</u>iberation <a href="https://ncatlab.org/nlab/show/lattice#definition"
-                            style="text-decoration: inherit;"><u>L</u>attice <img width="16px"
-                                style="position:relative;top: 2px; margin-right: 3px;" src="cake.png" /></a> unto
-                        nibbān<u>a</u>
-                        <img style="display:block;margin:auto;max-width:100%;width:400px" src="y.png" />
+                    CASTELLA is a
+                    DAO
+                    (Decentralized Autonomous Organization) for the management of open-source softwares for the <a
+                        href="https://anagata-cetana.com" target="_blank">Anāgata
+                        Cetanā retreats</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
+                </div><br /><br />
+                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house 142 recluses and their
+                    spouses who
+                    they are legally married to. The research focus of the first Anāgata Cetanā Monastery is on
+                    the conscious control of
+                    physicology via the use of various tantra for the prolongation of life and the slow-down of
+                    biological aging.</div>
+                <br /><br />
+                Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
+                utilizing advanced meditation techniques and various diets to enable a human who practices
+                loving-kindness and pure compassion to be able to live and stay young for more than 400 years - such
+                that a decentralized society of
+                loving-kindness
+                and pure compassion will gradually emerge around the world that would outlive the existing systems
+                controlled by corrupted
+                capitalists
+                and politicians of the 21st century (i.e. those who are blinded by greed and the fear of death and thus
+                are incapable of practicing loving-kindness
+                and pure compassion.)
+                <br /><br />
+                <br /><br />
+                <div> The first CASTELLA ICO is coming up in Q2 of 2025.</div>
 
-                    </blockquote>
-                    <br />
-
-                    CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
-                    towards the
-                    deathless element via the total absolute understanding (and experiencing) of the true nature of
-                    reality ...which is said
-                    to transcend all forms,
-                    senses,
-                    perceptions and
-                    mental constructs... the deathless element is what is referred to as
-                    nibbāna (or nirvāṇa) in
-                    the Buddhist tradition.
-                    <br /><br />
-
-                    <div>
-                        <img src="Castella1.jpg.webp" / style="display:block;margin:auto;max-width:100%;width:400px">
-                    </div>
-                    <blockquote style="font-size:0.9em;line-height: 1.6em;">
-                        <i>"May I attain nibbāna in this life, and so I can put a full
-                            completion
-                            (圓滿; परिपूर्ण) into
-                            this
-                            app, and so may it bring loveliness into your life the same
-                            way <a href="https://en.wikipedia.org/wiki/Castella">the Japanese cake &nbsp;<img
-                                    width="15px" style="position:relative;top: 2px;" src="cake.png">&nbsp;<img
-                                    width="15px" style="position:relative;top: 2px;" src="cake.png">&nbsp;<img
-                                    width="15px" style="position:relative;top: 2px;" src="cake.png"></a>&nbsp; brightens
-                            up my
-                            day!" --- Archy
-                        </i>
-                    </blockquote>
-                    <br />
-                    {> As of 2024, The CASTELLA Mobile App is still in active development. Meanwhile, if you are new to
-                    the idea of Śūnyatā, you can get
-                    yourself familiar with the Heart Sūtra. }
-
-                    <br /><br /> <br />
-                    <iframe style="display:block;margin:auto;max-width:100%;width:400px" width="560" height="315"
-                        src="https://www.youtube.com/embed/W48DX9V6MTc?si=_Z7B5F1TnFoz19BZ" title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <br />
-                    <br />
-                    { When one has familiarized oneself with the notion of Śūnyatā, the next step is to practice
-                    samatha-vipassanā each day for the realization of the Seven Factors of Awakening (while
-                    aligning oneself on the Eightfold Path ☸️ - such is the Middle Way) }
-                    <br /><br />
-                    <blockquote style="font-size:0.9em;"><i>
-                            “And what, bhikkhus, is the path leading to the unconditioned? Here, bhikkhus, a bhikkhu
-                            develops the enlightenment factor of mindfulness, which is based upon seclusion, dispassion,
-                            and cessation, maturing in release: this is called the path leading to the unconditioned….”
-                            <br /><br />
-                            “And what, bhikkhus, is the path leading to the unconditioned? Here, bhikkhus, a bhikkhu
-                            develops the enlightenment factor of discrimination of states … the enlightenment factor of
-                            energy … the enlightenment factor of rapture … the enlightenment factor of tranquillity …
-                            the
-                            enlightenment factor of concentration … the enlightenment factor of equanimity, which is
-                            based
-                            upon seclusion, dispassion, and cessation, maturing in release: this is called the path
-                            leading
-                            to the unconditioned….”</i>
-                        <br />
-                        <br /> -- <a
-                            href="https://suttacentral.net/sn43.12/en/bodhi?lang=en&reference=none&highlight=false">SN43.12
-                            vii-viii <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
-                                src="cake.png" /></a>
-                    </blockquote>
-                    <br />
-                    <br />
-
-                    { There are many nice sutras to read before vipassanā meditation practices. Below is one for
-                    example }
-
-                    <blockquote style="font-size:0.9em;">
-                        Thus have I heard. On one occasion the Blessed One was dwelling at Baraṇasi in the Deer Park
-                        at Isipatana. There the Blessed One addressed the bhikkhus of the group of five thus:
-                        “Bhikkhus!”<br />
-                        <br />
-
-                        “Venerable sir!” those bhikkhus replied. The Blessed One said this:<br />
-                        <br />
-
-                        “Bhikkhus, form is nonself. For if, bhikkhus, form were self, this form would not lead to
-                        affliction, and it would be possible to have it of form: ‘Let my form be thus; let my form
-                        not be thus.’ But because form is nonself, form leads to affliction, and it is not possible
-                        to have it of form: ‘Let my form be thus; let my form not be thus.’<br />
-                        <br />
-
-                        “Feeling is nonself…. … Perception is nonself…. Volitional formations are nonself….
-                        Consciousness is nonself. For if, bhikkhus, consciousness were self, this consciousness
-                        would not lead to affliction, and it would be possible to have it of consciousness: ‘Let my
-                        consciousness be thus; let my consciousness not be thus.’ But because consciousness is
-                        nonself, consciousness leads to affliction, and it is not possible to have it of
-                        consciousness: ‘Let my consciousness be thus; let my consciousness not be thus.’<br />
-                        <br />
-
-                        “What do you think, bhikkhus, is form permanent or impermanent?”—“Impermanent, venerable
-                        sir.”—“Is what is impermanent suffering or happiness?”—“Suffering, venerable sir.”—“Is what
-                        is impermanent, suffering, and subject to change fit to be regarded thus: ‘This is mine,
-                        this I am, this is my self’?”—“No, venerable sir.”<br />
-                        <br />
-
-                        “Is feeling permanent or impermanent?… Is perception permanent or impermanent?… Are
-                        volitional formations permanent or impermanent?… Is consciousness permanent or
-                        impermanent?”—“Impermanent, venerable sir.”—“Is what is impermanent suffering or
-                        happiness?”— “Suffering, venerable sir.”—“Is what is impermanent, suffering, and subject to
-                        change fit to be regarded thus: ‘This is mine, this I am, this is my self’?”—“No, venerable
-                        sir.”<br />
-                        <br />
-
-                        “Therefore, bhikkhus, any kind of form whatsoever, whether past, future, or present,
-                        internal or external, gross or subtle, inferior or superior, far or near, all form should be
-                        seen as it really is with correct wisdom thus: ‘This is not mine, this I am not, this is not
-                        my self.’<br />
-                        <br />
-
-                        “Any kind of feeling whatsoever … Any kind of perception whatsoever … Any kind of volitional
-                        formations whatsoever … Any kind of consciousness whatsoever, whether past, future, or
-                        present, internal or external, gross or subtle, inferior or superior, far or near, all
-                        consciousness should be seen as it really is with correct wisdom thus: ‘This is not mine,
-                        this I am not, this is not my self.’<br />
-                        <br />
-
-                        “Seeing thus, bhikkhus, the instructed noble disciple experiences revulsion towards form,
-                        revulsion towards feeling, revulsion towards perception, revulsion towards volitional
-                        formations, revulsion towards consciousness. Experiencing revulsion, he becomes
-                        dispassionate. Through dispassion his mind is liberated. When it is liberated there comes
-                        the knowledge: ‘It’s liberated.’ He understands: ‘Destroyed is birth, the holy life has been
-                        lived, what had to be done has been done, there is no more for this state of being.’”<br />
-                        <br />
-
-                        That is what the Blessed One said. Elated, those bhikkhus delighted in the Blessed One’s
-                        statement. And while this discourse was being spoken, the minds of the bhikkhus of the group
-                        of five were liberated from the taints by nonclinging.
-                        <br />
-                        <br />
-                        -- <a
-                            href="https://suttacentral.net/sn22.59/en/bodhi?lang=en&reference=none&highlight=false">SN22.59
-                            <img width="16px" style="position:relative;top: 2px; margin-right: 3px;" src="cake.png" />
-                        </a>
-                    </blockquote>
-                    <br />
-                    <br />
-
-                    { Before one can go deeper into understanding the true nature of reality, an often recommended first
-                    milestone is <a href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to
-                        enter
-                        the first dhyāna <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
-                            src="cake.png" /></a> && this is where the pragmatic
-                    aspect of the CASTELLA
-                    framework comes in,
-                    together with its mathematical formalization. [Currently still in active
-                    development; coming up in 2025~2026] }
-
-                    <br />
-                    <br />
-
-
-                    <!-- <blockquote style="font-size: 0.9em;">
-
-                    </blockquote> -->
-                    <!-- <u>books</u>
-                    <br />
-                    <br />
-                    Build Yourself an ArchGPT (2025)
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <u>projects</u>
-                    <br />
-                    <br />
-                    - <a href="https://archy.build" target="_blank">archy.build</a>: your mechanical friend
-                    <br />
-                    <br />
-                    - <a href="https://archgpt.dev" target="_blank">archgpt.dev</a>: an open-source RAG engine based on
-                    hierarchy-graphs
-                    <br />
-                    <br />
-                    - <a href="https://lo.fish" target="_blank">lo.fish</a>: a meta-programming language
-                    <br />
-                    <br />
-
-                    - <a href="https://0a.io" target="_blank">0a.io</a>: a proto-scientific sutra reader for the Pali
-                    Canon in Theravada Buddhism -->
-
-                </div>
                 <br />
                 <!-- - ...
                 <br /><br /><br /> -->
