--- a/index.html
+++ b/index.html
@@ -76,15 +76,24 @@
                     biological aging.</div>
                 <br /><br />
                 Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
-                utilizing advanced meditation techniques and various diets to enable a human who practices
-                loving-kindness and pure compassion to be able to live and stay young for more than 400 years - such
+                utilizing advanced meditation techniques and various diets so to enable Recluses who practice
+                loving-kindness and pure compassion to live and stay young for more than 400 years. It is in this way
                 that a decentralized society of
                 loving-kindness
-                and pure compassion will gradually emerge around the world that would outlive the existing systems
+                and pure compassion will emerge around the world.
+                <br /><br />
+
+                The non-violent way to solve all of humanity's cultural-political problems is simply for such a
+                decentralized society of
+                loving-kindness
+                and pure compassion that will outlive existing systems
                 controlled by corrupted
                 capitalists
-                and politicians of the 21st century (i.e. those who are blinded by greed and the fear of death and thus
-                are incapable of practicing loving-kindness
+                and politicians of the 21st century (i.e. those who are spreading the <a
+                    href="https://en.wikipedia.org/wiki/Three_poisons" target="_blank">three poisons</a> in this world,
+                and are so blinded by greed and
+                selfishness that they
+                are incapable of loving-kindness
                 and pure compassion.)
                 <br /><br />
                 <br /><br />
