--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <br /><br />
                 Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
                 utilizing advanced meditation techniques and various diets so to enable Recluses who practice
-                loving-kindness and pure compassion to live and stay young for more than 400 years. It is in this way
+                loving-kindness and pure compassion to live and stay young almost indefinitely. It is in this way
                 that a decentralized society of
                 loving-kindness
                 and pure compassion will emerge around the world.
