--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
                 utilizing advanced meditation techniques and various diets so to enable Recluses who practice
                 loving-kindness and pure compassion to live and stay young almost indefinitely. It is in this way
-                that a decentralized society of
+                that a decentralized Anāgata Cetanā society of
                 loving-kindness
-                and pure compassion will emerge around the world.
+                and pure compassion would emerge around the world.
                 <br /><br />
 
                 The non-violent way to solve all of humanity's cultural-political problems is simply for such a
