--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
                 and pure compassion would emerge around the world.
                 <br /><br />
 
-                The non-violent way to solve all of humanity's cultural-political problems is simply for such a
+                The non-violent way to solve all of humanity's cultural-political problems is simply for such an
+                overarching
                 decentralized society of
                 loving-kindness
-                and pure compassion that will outlive existing systems
+                and pure compassion to outlive existing systems
                 controlled by corrupted
                 capitalists
                 and politicians of the 21st century (i.e. those who are spreading the <a
