--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                 and pure compassion would emerge around the world.
                 <br /><br />
 
-                The non-violent way to solve all of humanity's cultural-political problems is simply for such an
-                overarching
+                The non-violent way to solve all of humanity's cultural-political problems is simply for such a
                 decentralized society of
                 loving-kindness
                 and pure compassion to outlive existing systems
@@ -95,7 +94,8 @@
                 and are so blinded by greed and
                 selfishness that they
                 are incapable of loving-kindness
-                and pure compassion.)
+                and pure compassion.) It is in this way that the propagation of loving-kindness
+                and pure compassion will always win the three poisons.
                 <br /><br />
                 <br /><br />
                 <div> The first CASTELLA ICO is coming up in Q2 of 2025.</div>
