--- a/index.html
+++ b/index.html
@@ -95,7 +95,14 @@
                 selfishness that they
                 are incapable of loving-kindness
                 and pure compassion.) It is in this way that the propagation of loving-kindness
-                and pure compassion will always win the three poisons.
+                and pure compassion will always win the three poisons.<br /><br />
+                It is in this way that part of humanity (those who practice
+                loving-kindness
+                and pure compassion with the secret wisdom of the Anāgata Cetanā tantra) will gradually evolves
+                into
+                a
+                new species that will share a similiar biological ability as <a
+                    href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>.
                 <br /><br />
                 <br /><br />
                 <div> The first CASTELLA ICO is coming up in Q2 of 2025.</div>
