--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 selfishness that they
                 are incapable of loving-kindness
                 and pure compassion.) It is in this way that the propagation of loving-kindness
-                and pure compassion will always win the three poisons.<br /><br />
+                and pure compassion will always surpass the three poisons.<br /><br />
                 It is in this way that part of humanity (those who practice
                 loving-kindness
                 and pure compassion with the secret wisdom of the Anāgata Cetanā tantra) will gradually evolves
