--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
                 and pure compassion will always surpass the three poisons.<br /><br />
                 It is in this way that part of humanity (those who practice
                 loving-kindness
-                and pure compassion with the secret wisdom of the Anāgata Cetanā tantra) will gradually evolves
+                and pure compassion with the secret wisdom of the Anāgata Cetanā tantra) will gradually evolve (both
+                biologically as well as technologically)
                 into
                 a
-                new species that will share a similiar biological ability as <a
-                    href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>.
+                new species that will share a similiar ability as <a
+                    href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a> for longevity
+                in loving-kindness and pure compassion .
                 <br /><br />
                 <br /><br />
                 <div> The first CASTELLA ICO is coming up in Q2 of 2025.</div>
