--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
-                    CASTELLA <img width="15px" style="position:relative; margin-left:4px; top: 2px;" src="cake.png">
+                    CASTELLA <img width="15px" style="position:relative; margin-left:4px; top: 2px;" src="cake.png">:
+                    to propagate the practice of loving-kindness and pure compassion with great wisdom
                     <br />
 
                     <br />
