--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div>
                     CASTELLA is a
                     DAO
-                    (Decentralized Autonomous Organization) for the management of open-source softwares for the <a
-                        href="https://anagata-cetana.com" target="_blank">Anāgata
+                    (Decentralized Autonomous Organization) for the development and management of open-source softwares
+                    for the <a href="https://anagata-cetana.com" target="_blank">Anāgata
                         Cetanā retreats</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
                 <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house 142 recluses and their
