--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     CASTELLA is a
                     DAO
                     (Decentralized Autonomous Organization) for the development and management of open-source softwares
-                    for <a href="https://anagata-cetana.com" target="_blank">Anāgata
+                    for <a href="https://lo.fish" target="_blank">lo.fish</a> and <a href="https://anagata-cetana.com"
+                        target="_blank">Anāgata
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
                 <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house 142 recluses and their
