--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                         target="_blank">Anāgata
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
-                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house 142 recluses and their
+                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 that will be able to house 142
+                    Anāgata Cetanā Recluses and their
                     spouses who
                     they are legally married to. The research focus of the first Anāgata Cetanā Monastery is on
                     the conscious control of
