--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     biological aging.</div>
                 <br /><br />
                 Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
-                utilizing advanced meditation techniques and various diets so to enable Recluses who practice
+                utilizing advanced meditation techniques in combination with diets and tantra so to enable Recluses who
+                practice
                 loving-kindness and pure compassion to live and stay healthy almost indefinitely. It is in this way
                 that a decentralized Anāgata Cetanā society of
                 loving-kindness
