--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 The non-violent way to solve all of humanity's cultural-political problems is simply for such a
                 decentralized society of
                 loving-kindness
-                and pure compassion to outlive existing systems
+                and pure compassion to outlive all these existing systems
                 controlled by corrupted
                 capitalists
                 and politicians of the 21st century (i.e. those who are spreading the <a
@@ -98,7 +98,8 @@
                 and are so blinded by greed and
                 selfishness that they
                 are incapable of loving-kindness
-                and pure compassion.) It is in this way that the propagation of loving-kindness
+                and pure compassion.) New systems that value authenticity and loving-kindness shall arise. It is in this
+                way that the propagation of loving-kindness
                 and pure compassion will always surpass the three poisons.<br /><br />
                 It is in this way that part of humanity (those who practice
                 loving-kindness
