--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         target="_blank">Anāgata
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
-                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house up to 142
+                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house at a time up to 142
                     Anāgata Cetanā Recluses and their
                     spouses who
                     they are legally married to. The research focus of the first Anāgata Cetanā Monastery is on
@@ -91,7 +91,7 @@
                 decentralized society of
                 loving-kindness
                 and pure compassion to outlive all these existing systems
-                controlled by corrupted
+                operating for the sole benefits of corrupted
                 capitalists
                 and politicians of the 21st century (i.e. those who are spreading the <a
                     href="https://en.wikipedia.org/wiki/Three_poisons" target="_blank">three poisons</a> in this world,
