--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
                         target="_blank">Anāgata
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
-                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 to house at a time up to 42
+                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 that will include a Montessori
+                    school, 4 meditation chambers, 2 libraries, a garden and a farm, as well as providing short-term
+                    housing to
+                    42
                     Anāgata Cetanā Recluses and their
                     spouses who
-                    they are legally married to. The research focus of the first Anāgata Cetanā Monastery is on
+                    they are legally married to, and their children. The research focus of the first Anāgata Cetanā
+                    Monastery is on
                     the conscious control of
                     physicology via the use of various tantra for the prolongation of life and the slow-down of
                     biological aging.</div>
