--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
                 <div>The first Anāgata Cetanā Monastery will be constructed by 2030 that will include a Montessori
-                    school, 4 meditation chambers, 2 libraries, a garden and a farm, as well as providing short-term
+                    school, 4 meditation chambers, 2 libraries, 2 gardens and a farm, as well as providing short-term
                     housing to
                     42
-                    Anāgata Cetanā Recluses and their
-                    spouses who
-                    they are legally married to, and their children. The research focus of the first Anāgata Cetanā
+                    Anāgata Cetanā Recluses and their family. The research focus of the first Anāgata Cetanā
                     Monastery is on
                     the conscious control of
                     physicology via the use of various tantra for the prolongation of life and the slow-down of
