--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
                 <div>The first Anāgata Cetanā Monastery will be constructed by 2030 that will include a Montessori
-                    school, 4 meditation chambers, 2 libraries, 2 gardens and a farm, as well as providing short-term
+                    school, 7 meditation chambers, 6 secret chambers, 2 libraries, 2 gardens and a farm, as well as
+                    providing short-term
                     housing to
                     42
                     Anāgata Cetanā Recluses and their family. The research focus of the first Anāgata Cetanā
