--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     providing short-term
                     housing to
                     42
-                    Anāgata Cetanā Recluses and their family. The research focus of the first Anāgata Cetanā
+                    Anāgata Cetanā Recluses and their families. The research focus of the first Anāgata Cetanā
                     Monastery is on
                     the conscious control of
                     physicology via the use of various tantra for the prolongation of life and the slow-down of
@@ -94,8 +94,8 @@
                 The non-violent way to solve all of humanity's cultural-political problems is simply for such a
                 decentralized society of
                 loving-kindness
-                and pure compassion to outlive all these existing systems
-                operating for the sole benefits of corrupted
+                and pure compassion to outlive the existing corrupted systems
+                that are currently being operated for the benefits of corrupted
                 capitalists
                 and politicians of the 21st century (i.e. those who are spreading the <a
                     href="https://en.wikipedia.org/wiki/Three_poisons" target="_blank">three poisons</a> in this world,
@@ -105,14 +105,14 @@
                 and pure compassion.) New systems that value authenticity and loving-kindness shall arise. It is in this
                 way that the propagation of loving-kindness
                 and pure compassion will always surpass the three poisons.<br /><br />
-                It is in this way that part of humanity (those who practice
+                The future intention of Anāgata Cetanā is for the part of humanity that actually practice
                 loving-kindness
-                and pure compassion with the secret wisdom of the Anāgata Cetanā tantra) will gradually evolve (both
+                and pure compassion in everyday life to gradually evolve (both
                 biologically as well as technologically)
                 into
                 a
-                new species that will share a similiar ability as <a
-                    href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a> for longevity
+                new species that will can consciously induce transdifferentiation (i.e. similiar to <a
+                    href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>) for longevity
                 in loving-kindness and pure compassion.
                 <br /><br />
                 <br /><br />
