--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
                 and pure compassion.) New systems that value authenticity and loving-kindness shall arise. It is in this
                 way that the propagation of loving-kindness
                 and pure compassion will always surpass the three poisons.<br /><br />
-                The future intention of Anāgata Cetanā is for the part of humanity that actually practice
+                The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who actually
+                practices
                 loving-kindness
-                and pure compassion in everyday life to gradually evolve (both
+                and pure compassion in everyday life with the greatest wisdom" to gradually evolve (both
                 biologically as well as technologically)
                 into
                 a
