--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                         target="_blank">Anāgata
                         Cetanā</a>, as well as the construction of Anāgata Cetanā Monasteries around the world.
                 </div><br /><br />
-                <div>The first Anāgata Cetanā Monastery will be constructed by 2030 that will include a Montessori
+                <div style="border-left:#111 solid 5px; padding-left:10px">The first Anāgata Cetanā Monastery is
+                    scheduled to be
+                    constructed by 2030 that will include a Montessori
                     school, 7 meditation chambers, 6 secret chambers, 2 libraries, 2 gardens, 2 kitchens, 2 rivers, and
                     a farm, as well as
                     providing short-term
@@ -85,7 +87,8 @@
                 Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
                 utilizing advanced meditation techniques in combination with diets and tantra so to enable Recluses who
                 practice
-                loving-kindness and pure compassion to live and stay healthy almost indefinitely. It is in this way
+                loving-kindness and pure compassion to live and stay healthy almost indefinitely (when conditions
+                allow). It is in this way
                 that a decentralized Anāgata Cetanā society of
                 loving-kindness
                 and pure compassion would emerge around the world.
@@ -112,7 +115,7 @@
                 biologically as well as technologically)
                 into
                 a
-                new species that will can consciously induce transdifferentiation (i.e. similiar to <a
+                new species that can consciously induce transdifferentiation (i.e. similiar to <a
                     href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>) for longevity
                 in loving-kindness and pure compassion.
                 <br /><br />
