--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
                     CASTELLA <img width="15px" style="position:relative; margin-left:4px; top: 2px;" src="cake.png">:
-                    to propagate the practice of loving-kindness and pure compassion with great wisdom
+                    for the love of lo.fish and Anāgata
+                    Cetanā
                     <br />
 
                     <br />
@@ -72,8 +73,9 @@
                 </div><br /><br />
                 <div style="border-left:#111 solid 5px; padding-left:10px">The first Anāgata Cetanā Monastery is
                     scheduled to be
-                    constructed by 2030 that will include a Montessori
-                    school, 7 meditation chambers, 6 secret chambers, 2 libraries, 2 gardens, 2 kitchens, 2 rivers, and
+                    constructed by 2030 that will include a
+                    school for Montessori and Pre-university education, 7 meditation chambers, 6 secret chambers, 2
+                    libraries, 2 gardens, 2 kitchens, 2 rivers, and
                     a farm, as well as
                     providing short-term
                     housing to
@@ -87,7 +89,7 @@
                 Anāgata Cetanā's aim is to propagate loving-kindness and pure compassion with the great secret wisdom of
                 utilizing advanced meditation techniques in combination with diets and tantra so to enable Recluses who
                 practice
-                loving-kindness and pure compassion to live and stay healthy almost indefinitely (when conditions
+                loving-kindness and pure compassion to live long and stay healthy almost indefinitely (when conditions
                 allow). It is in this way
                 that a decentralized Anāgata Cetanā society of
                 loving-kindness
