--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div style="border-left:#111 solid 5px; padding-left:10px">The first Anāgata Cetanā Monastery is
                     scheduled to be
                     constructed by 2030 that will include a
-                    school for Montessori and Pre-university education, 7 meditation chambers, 6 secret chambers, 2
+                    school for Montessori and pre-university education, 7 meditation chambers, 6 secret chambers, 2
                     libraries, 2 gardens, 2 kitchens, 2 rivers, and
                     a farm, as well as
                     providing short-term
