--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 allow). It is in this way
                 that a decentralized Anāgata Cetanā society of
                 loving-kindness
-                and pure compassion would emerge around the world starting from 2030.
+                and pure compassion will emerge around the world starting from 2030.
                 <br /><br />
 
                 The non-violent way to solve all of humanity's cultural-political problems is simply for such a
