--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
                 and are so blinded by greed and
                 selfishness that they
                 are incapable of loving-kindness
-                and pure compassion.) New systems that value authenticity and loving-kindness shall arise. It is in this
-                way that the propagation of loving-kindness
-                and pure compassion will always surpass the three poisons.<br /><br />
+                and pure compassion.) New systems that value authenticity and loving-kindness shall arise. This is how
+                we can change the world via non-violent and loving-kindness.<br /><br />
                 The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who actually
                 practices
                 loving-kindness
