--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
                 and are so blinded by greed and
                 selfishness that they
                 are incapable of loving-kindness
-                and pure compassion.) New systems that value authenticity and loving-kindness shall arise. This is how
-                we can change the world via non-violent and loving-kindness.<br /><br />
+                and pure compassion.) As a decentralized Anāgata Cetanā society grows around the world, new systems that
+                value authenticity and loving-kindness shall arise. This is how
+                we can change the world via non-violent and loving-kindness i.e. by outliving the corrupted.<br /><br />
                 The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who actually
                 practices
                 loving-kindness
