--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <br /><br />
                 <br /><br />
                 <div> The first CASTELLA ICO is coming up in Q2 of 2025.</div>
-
+                <div>For enquiry: e@castella.art</div>
                 <br />
                 <!-- - ...
                 <br /><br /><br /> -->
